--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@vis.gl/react-maplibre": "^1.0.0-alpha.4",
+    "@watergis/mapbox.photon": "^0.0.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.454.0",
     "maplibre-gl": "^4.7.1",
-    "next": "15.0.2",
-    "next-auth": "^5.0.0-beta.25",
+    "next": "^15.0.3",
+    "next-auth": "^4.24.10",
     "next-themes": "^0.3.0",
+    "openmeteo": "^1.1.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
