--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-tooltip": "^1.1.3",
     "@vis.gl/react-maplibre": "^1.0.0-alpha.4",
     "@watergis/mapbox.photon": "^0.0.5",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -38,7 +39,8 @@
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "typeorm": "^0.3.20",
-    "vaul": "^1.1.1"
+    "vaul": "^1.1.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "eslint": "^8",
