--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next": "^15.0.3",
     "next-auth": "^4.24.10",
     "next-themes": "^0.3.0",
+    "node-ipinfo": "^4.0.1",
     "openmeteo": "^1.1.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
