Worked on the homepage and map widjet

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 NEXTAUTH_SECRET= "'run $ openssl rand -base64 32' to get secret" 
+IPINFO_TOKEN="Your token"
 GITHUB_SECRET="Github secret"
 GITHUB_ID="Github client ID"
