--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.12.0",
     "lucide-react": "^0.454.0",
     "maplibre-gl": "^4.7.1",
     "next": "^15.0.3",
