--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.12.0",
     "html-react-parser": "^5.1.18",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.454.0",
     "maplibre-gl": "^4.7.1",
+    "mysql2": "^3.11.5",
     "next": "^15.0.3",
-    "next-auth": "^4.24.10",
+    "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "node-ipinfo": "^4.0.1",
     "openmeteo": "^1.1.4",
@@ -37,6 +39,7 @@
     "react-icons": "^5.3.0",
     "react-svg": "^16.2.0",
     "reflect-metadata": "^0.2.2",
+    "rimraf": "^6.0.1",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
     "suncalc": "^1.9.0",
@@ -48,9 +51,11 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "eslint": "^8",
+    "eslint": "^9.16.0",
     "eslint-config-next": "15.0.2",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.16",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.2"
   }
 }
