--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 NEXTAUTH_SECRET= "'run $ openssl rand -base64 32' to get secret" 
-IPINFO_TOKEN="Your token"
+IPINFO_TOKEN="Ipinfo token"
 GITHUB_SECRET="Github secret"
 GITHUB_ID="Github client ID"
+OPENROUTESERVICE_SECRET="Openrouteservice token"
+NEXT_PUBLIC_BASE_URL="http://localhost:3000 or domain URL"
