--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/typeorm-adapter": "^2.7.4",
+    "@maplibre/maplibre-gl-directions": "^0.7.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.1",
@@ -19,6 +20,7 @@
     "@radix-ui/react-tooltip": "^1.1.3",
     "@vis.gl/react-maplibre": "^1.0.0-alpha.4",
     "@watergis/mapbox.photon": "^0.0.5",
+    "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
@@ -27,6 +29,7 @@
     "html-react-parser": "^5.1.18",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.454.0",
+    "mapbox-gl": "^3.8.0",
     "maplibre-gl": "^4.7.1",
     "mysql2": "^3.11.5",
     "next": "^15.0.3",
@@ -34,6 +37,7 @@
     "next-themes": "^0.3.0",
     "node-ipinfo": "^4.0.1",
     "openmeteo": "^1.1.4",
+    "polyline": "^0.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
