--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "@react-three/drei": "^9.120.4",
+    "@react-three/fiber": "^8.17.10",
     "@vis.gl/react-maplibre": "^1.0.0-alpha.4",
     "@watergis/mapbox.photon": "^0.0.5",
     "axios": "^1.7.9",
@@ -32,15 +34,16 @@
     "mapbox-gl": "^3.8.0",
     "maplibre-gl": "^4.7.1",
     "mysql2": "^3.11.5",
-    "next": "^15.0.3",
+    "next": "^15.1.0",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "node-ipinfo": "^4.0.1",
     "openmeteo": "^1.1.4",
     "polyline": "^0.2.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-intersection-observer": "^9.14.0",
     "react-svg": "^16.2.0",
     "reflect-metadata": "^0.2.2",
     "rimraf": "^6.0.1",
@@ -50,6 +53,8 @@
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.171.0",
+    "three-stdlib": "^2.35.2",
     "typeorm": "^0.3.20",
     "vaul": "^1.1.1",
     "zod": "^3.23.8"
