--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@react-three/drei": "^9.120.4",
-    "@react-three/fiber": "^8.17.10",
+    "@react-three/fiber": "^8.17.12",
     "@types/react": "^19.0.7",
     "@types/react-dom": "^19.0.3",
+    "@types/three": "^0.172.0",
     "@vis.gl/react-maplibre": "^1.0.0-alpha.4",
     "@watergis/mapbox.photon": "^0.0.5",
     "axios": "^1.7.9",
@@ -56,7 +57,7 @@
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.171.0",
+    "three": "^0.172.0",
     "three-stdlib": "^2.35.2",
     "typeorm": "^0.3.20",
     "vaul": "^1.1.1",
