--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "openmeteo": "^1.1.4",
     "polyline": "^0.2.0",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.14.0",
