--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "lucide-react": "^0.454.0",
     "mapbox-gl": "^3.8.0",
     "maplibre-gl": "^4.7.1",
+    "motion": "^12.0.11",
     "mysql2": "^3.11.5",
     "next": "^15.1.0",
     "next-auth": "^4.24.11",
